kubernetes/main/templates/postgres-database/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pgo-${APP}
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: pgo-${APP}
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # internal
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: pgo-${APP}
      ports:
        - port: &port 5432
          protocol: TCP
        - port: 8008
          protocol: TCP
    # app
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ${APP}
      ports:
        - port: *port
          protocol: TCP
  egress:
    # internal
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: pgo-${APP}
      ports:
        - port: *port
          protocol: TCP
        - port: 8008
          protocol: TCP
    # Minio
    - to:
        - ipBlock:
            cidr: 10.1.1.3/32
      ports:
        - port: 80
          protocol: TCP
        - port: 443
          protocol: TCP
    # kube-dns
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    # k8s api-server
    - to:
        - ipBlock:
            cidr: 10.1.1.31/32
        - ipBlock:
            cidr: 10.1.1.32/32
        - ipBlock:
            cidr: 10.1.1.33/32
      ports:
        - port: 6443
          protocol: TCP
